Bugfixes: playerlist now next to each other again (not below); double token delete handled; Feature: stretching token moves it to bottom z-order

--- a/static/layout.css
+++ b/static/layout.css
@@ -157,7 +157,7 @@ div#tokenbar img:hover {
 
 div#players {
 	display: block;
-	width: 200px;
+	width: 700px;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
